# fabric-fs

./: .gitignore  AGENTS.md  AGENTS_rewriters.md  CLAUDE.md  COMMANDS.md  CONTEXT.md  COPYRIGHT  Cargo.toml  DEVELOPMENT.md  README.md  TESTING.md  justfile  run-fuse.sh  run-server.sh  session.proto  smoke-sessions.sh  smoke.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  fabricfsctl-examples.md  protocol.md  session-protocol-tooling.md
fabricfs-fuse/: Cargo.toml
fabricfs-fuse/src/: cli.rs  fs.rs  lib.rs  main.rs  reply.rs  startup.rs
fabricfs-fuse/tests/: product_wiring.rs
fabricfs-observability/: Cargo.toml
fabricfs-observability/src/: lib.rs
fabricfs-server/: Cargo.toml
fabricfs-server/src/: auth.rs  lib.rs  main.rs  overlay.rs  passthrough.rs  published_store.rs  root.rs  runtime_state.rs  server.rs  service.rs  session_service.rs  session_storage.rs  storage_runtime.rs  watch.rs  worker_pool.rs
fabricfs-server/src/overlay/: copy_up.rs  directory_ops.rs  fs_ops.rs  layout.rs  metadata_ops.rs  namespace_ops.rs  objects.rs  runtime_ops.rs  tombstones.rs  visibility.rs  xattrs.rs
fabricfs-server/src/server/: advanced_io.rs  byte_io.rs  errors.rs  locks.rs  metadata.rs  paths.rs  permissions.rs  xattrs.rs
fabricfs-server/src/service/: inode_map.rs  translation.rs
fabricfs-server/src/session_service/: import_idempotency.rs
fabricfs-server/src/session_storage/: durability.rs
fabricfs-server/src/watch/: admission.rs  events.rs  publication.rs  self_notify.rs
fabricfs-server/tests/: authorization.rs  fd_pressure.rs  jetstream_publish.rs  ops.rs  service_adapter.rs
fabricfs-session-protocol/: Cargo.toml  build.rs
fabricfs-session-protocol/src/: lib.rs  session.rs  utils.rs
fabricfs-transport/: Cargo.toml
fabricfs-transport/src/: auth.rs  client.rs  lib.rs  policy.rs  server.rs  subjects.rs  utils.rs
fabricfs-transport/tests/: common_stack_transport.rs
fs-core/: Cargo.toml
fs-core/src/: lib.rs
fs-core/tests/: dispatcher_contract.rs
fs-fuse/: Cargo.toml
fs-fuse/src/: cache.rs  lib.rs
fs-fuse/tests/: fuse_adapter_contract.rs
fs-protocol/: Cargo.toml  build.rs
fs-protocol/fixtures/: copy_file_range_response.pb.hex  directory_response.pb.hex  error_response.pb.hex  invalidation.pb.hex  read_request.pb.hex  setattr_response.pb.hex  symlink_request.pb.hex  unsupported_response.pb.hex  write_request.pb.hex  xattr_response.pb.hex
fs-protocol/proto/: fs.proto
fs-protocol/src/: attributes.rs  codec.rs  envelope.rs  errno.rs  error.rs  invalidation.rs  lib.rs  operation.rs  operation_spec.rs  path.rs  payload.rs  validation.rs
fs-protocol/tests/: protocol_wire_contract.rs
fs-testkit/: Cargo.toml
fs-testkit/src/: lib.rs
fs-transport-local/: Cargo.toml
fs-transport-local/src/: lib.rs
fs-transport-local/tests/: conformance_contract.rs
infra/nats/: README.md  docker-compose.yml
scripts/: release-check.sh  run_full_tests.sh  run_logged_command.sh  run_managed_command.sh
