[package]
name = "fabricfs-fuse"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
fs-core = { path = "../fs-core" }
fs-fuse = { path = "../fs-fuse" }
fs-protocol = { path = "../fs-protocol" }
fuser = { version = "0.14", features = ["abi-7-30"] }
hex = "0.4"
fabricfs-observability = { path = "../fabricfs-observability" }
nats = "0.25"
rand = { workspace = true }
thiserror = "2.0"
libc = "0.2"
fabricfs-transport = { path = "../fabricfs-transport" }
prost = "0.12"
tracing = "0.1"
